# Test_for_ZnamenkaCapital

./: .gitignore  CMakeLists.txt  NOTE.md  README.md  TASK.txt  addresses.txt
src/: Address.cpp  Address.hpp  AddressManager.cpp  AddressManager.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Log.cpp  Log.hpp  Shutdown.cpp  Shutdown.hpp  Worker.cpp  Worker.hpp  WorkerManager.cpp  WorkerManager.hpp  main.cpp
